# algorithm-project

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  plot.py  requirements.txt
.github/workflows/: build.yml
.results/: bubble_sort_100_linear_3rep_win.csv  bubble_sort_10k_linear_24rep_win.csv  bubble_sort_12k_linear_32rep_lnx.csv  bubble_sort_1k_linear_32rep_win.csv  counting_sort_10000_64_linear_length_linux.csv  counting_sort_10000_64_linear_max_linux.csv  counting_sort_1000_64_exponential_length_linux.csv  counting_sort_1000_64_exponential_max_linux.csv  counting_sort_1000_96_linear_length_linux.csv  counting_sort_1000_96_linear_max_linux.csv  counting_sort_100_128_exponential_length_linux.csv  counting_sort_100_128_exponential_max_linux.csv  counting_sort_100_128_linear_length_linux.csv  counting_sort_100_128_linear_max_linux.csv  counting_sort_100_256_exponential_length_linux.csv  counting_sort_100_256_linear_length_linux.csv  counting_sort_100_5_exponential_length.csv  counting_sort_100_64_exponential_length_linux.csv  counting_sort_100_64_linear_length_linux.csv  counting_sort_100_log_5rep_win.csv  counting_sort_12k_linear_32rep_lnx.csv  counting_sort_16k_linear_32rep_lnx.csv  counting_sort_1k0_linear_64rep_lnx.csv  counting_sort_1k_linear_32rep_win.csv  counting_sort_200_128_exponential_length_linux.csv  counting_sort_200_128_linear_length_linux.csv  counting_sort_200_128_linear_max_linux.csv  counting_sort_200_256_exponential_length_linux.csv  counting_sort_200_256_linear_length_linux.csv  counting_sort_200_64_exponential_length_linux.csv  counting_sort_200_64_linear_length_linux.csv  counting_sort_300_128_exponential_length_linux.csv  counting_sort_300_128_exponential_max_linux.csv  counting_sort_300_128_linear_length_linux.csv  counting_sort_300_128_linear_max_linux.csv  counting_sort_300_256_exponential_length_linux.csv  counting_sort_300_256_linear_length_linux.csv  counting_sort_300_64_exponential_length_linux.csv  counting_sort_300_64_linear_length_linux.csv  counting_sort_500_96_exponential_length_linux.csv  (+37 more)
.results/counting_sort/: counting_sort_200_128_exponential_max_linux.csv
.results/quick_3way_sort/: quick_3way_sort_100_256_linear_length_linux.csv  quick_3way_sort_200_256_exponential_length_linux.csv  quick_3way_sort_200_256_linear_length_linux.csv  quick_3way_sort_300_96_exponential_length_linux.csv
.results/quick_sort/: quick_sort_100_128_exponential_max_linux.csv  (+4 more)
.run/: benchmark (linear) (test).run.xml  benchmark (linear).run.xml  benchmark.run.xml  counting_sort.run.xml  quick_3way_sort.run.xml  quick_sort.run.xml  quick_sort_random_pivot.run.xml  tim_sort.run.xml
.template/: sort.cpp
counting_sort/: CMakeLists.txt  countingSort.c  countingSort.h  counting_sort.c  counting_sort.pyx  setup.py  sort.c  sort.cpp  sort.h  sort.pyx  utils.cpp  utils.h
docs/: main.tex
quick_3_way_sort/: q3sotr.pyx  quick3Way.c  quick3Way.h  quick_3_way_sort.pyx  setup.py  sort.c  sort.h
quick_3way_sort/: CMakeLists.txt  quick_3way_sort.pyx  setup.py  sort.c  sort.cpp  sort.h  utils.cpp
quick_sort/: CMakeLists.txt  qsort.pyx  quickSort.c  quickSort.h  quick_sort.c  quick_sort.pyx  setuo.py  setup.py  sort.c  sort.cpp  sort.h  utils.cpp
quick_sort_random_pivot/: CMakeLists.txt  randomized_quick_sort.c  setup.py  sort.c  sort.cpp  sort.h
randomized_quick_sort/: randomized_quick_sort.pyx  setup.py  sort.c  sort.h
tim_sort/: CMakeLists.txt  arena.c  setup.py  sort.c  sort.cpp  sort.h  tim_sort.c  tim_sort.pyx  utils.cpp  utils.h
tim_sort_optimized/: setup.py  sort.c  sort.h  tim_sort.c  tim_sort.pyx
utils/: utils.cpp  utils.h
(+46 files in other folders)
